// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker snapshots Simple marker tree 1`] = `
<DocumentFragment>
  <div
    class="wrapper leaflet-zoom-hide"
    style="z-index: 123;"
  >
    children
  </div>
</DocumentFragment>
`;

exports[`Marker snapshots Size marker tree 1`] = `
<DocumentFragment>
  <div
    class="wrapper leaflet-zoom-hide"
    style="z-index: 123; width: 40px; height: 50px;"
  >
    children
  </div>
</DocumentFragment>
`;

exports[`Marker snapshots has animation marker tree 1`] = `
<DocumentFragment>
  <div
    class="wrapper leaflet-zoom-animated"
    style="z-index: 123;"
  >
    children
  </div>
</DocumentFragment>
`;

exports[`Marker snapshots withMouseEvents marker tree 1`] = `
<DocumentFragment>
  <div
    class="wrapper leaflet-zoom-hide"
    style="z-index: 231;"
  >
    children
  </div>
</DocumentFragment>
`;
